--- a/RMG.Web/Areas/Admin/Views/Login/Index.cshtml
+++ b/RMG.Web/Areas/Admin/Views/Login/Index.cshtml
@@ -43,20 +43,14 @@
 
     <!-- page-wrapper Start-->
     <div class="page-wrapper">
-        <div class="authentication-box">
+        <div class=" authentication-box">
             <div class="container">
-                <div class="row">
-                    <div class="col-md-7 p-0 card-right">
+                <div class="d-flex align-items-center justify-content-center vh-100">
+                    <div class="col-md-7 p-0">
                         <div class="card tab2-card card-login">
                             <div class="card-body">
-                                <ul class="nav nav-tabs nav-material" id="top-tab" role="tablist">
-                                    <li class="nav-item">
-                                        <a class="nav-link active" id="top-profile-tab" data-bs-toggle="tab"
-                                           href="#top-profile" role="tab" aria-controls="top-profile"
-                                           aria-selected="true"><span class="icon-user me-2"></span>Login</a>
-                                    </li>
-                                </ul>
-                                <div class="tab-content" id="top-tabContent">
+                                <h2 class="font-primary text-center">Login</h2>
+                                <div class="tab-content mt-5" id="top-tabContent">
                                     <div class="tab-pane fade show active" id="top-profile" role="tabpanel"
                                          aria-labelledby="top-profile-tab">
                                         <form method="post" class="form-horizontal auth-form">
