--- a/RMG.Web/Areas/Customer/Views/Shared/_Layout.cshtml
+++ b/RMG.Web/Areas/Customer/Views/Shared/_Layout.cshtml
@@ -296,8 +296,8 @@
 								</div>
 							</div>
 							<div class="brand-logo">
-								<a href="index.html">
-									<img src="~/customer/images/icon/logo.png"
+								<a asp-controller="Games" asp-action="Index">
+									<img src="~/customer/images/icon/rmg.png" style="height:180px"
 										 class="img-fluid blur-up lazyload" alt="">
 								</a>
 							</div>
