--- a/RMG.Web/Areas/Identity/Pages/Account/Register.cshtml
+++ b/RMG.Web/Areas/Identity/Pages/Account/Register.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Register";
 }
 
-<h1>@ViewData["Title"]</h1>
+@* <h1>@ViewData["Title"]</h1> *@
 
 @* <div class="row">
     <div class="col-md-4">
@@ -62,27 +62,6 @@
     </div>
 </div> *@
 
-<!-- breadcrumb start -->
-<div class="breadcrumb-section">
-    <div class="container">
-        <div class="row">
-            <div class="col-sm-6">
-                <div class="page-title">
-                    <h2>create account</h2>
-                </div>
-            </div>
-            <div class="col-sm-6">
-                <nav aria-label="breadcrumb" class="theme-breadcrumb">
-                    <ol class="breadcrumb">
-                        <li class="breadcrumb-item"><a href="index.html">Home</a></li>
-                        <li class="breadcrumb-item active" aria-current="page">create account</li>
-                    </ol>
-                </nav>
-            </div>
-        </div>
-    </div>
-</div>
-<!-- breadcrumb End -->
 <!--section start-->
 <section class="register-page section-b-space">
     <div class="container">
@@ -94,16 +73,20 @@
                         <div asp-validation-summary="ModelOnly" class="text-danger" role="alert"></div>
                         <div class="form-row row">
                             <div class="col-md-6">
+                                <label asp-for="Input.FullName">Full Name</label>
+                                <input type="text" asp-for="Input.FullName" class="form-control" aria-required="true" placeholder="Full Name" required="">
+                            </div>
+                            <div class="col-md-6">
                                 <label asp-for="Input.Email">email</label>
                                 <input type="email" asp-for="Input.Email" class="form-control" autocomplete="username" aria-required="true" id="email" placeholder="Email" required="">
                             </div>
-                            <div class="col-md-6">
+                            </div>
+                            <div class="form-row row">
+                                <div class="col-md-6">
                                 <label asp-for="Input.Password">Password</label>
                                 <input asp-for="Input.Password" class="form-control" autocomplete="new-password" aria-required="true" type="password" id="review"
                                        placeholder="Enter your password" required="">
-
                             </div>
-                            <div class="form-row row">
                                 <div class="col-md-6">
                                     <label asp-for="Input.ConfirmPassword">Confirm Password</label>
                                     <input asp-for="Input.ConfirmPassword" class="form-control" autocomplete="new-password" aria-required="true" type="password" id="review"
@@ -111,7 +94,6 @@
                                 </div>
                             </div>
                             <button id="registerSubmit" type="submit" class="btn btn-solid w-auto">create Account</button>
-                        </div>
                     </form>
                 </div>
             </div>
