--- a/RMG.Web/Areas/Admin/Views/Game/Index.cshtml
+++ b/RMG.Web/Areas/Admin/Views/Game/Index.cshtml
@@ -10,17 +10,7 @@
                     </h3>
                 </div>
             </div>
-            <div class="col-lg-6">
-                <ol class="breadcrumb pull-right">
-                    <li class="breadcrumb-item">
-                        <a href="index.html">
-                            <i data-feather="home"></i>
-                        </a>
-                    </li>
-                    <li class="breadcrumb-item">Digital</li>
-                    <li class="breadcrumb-item active">Product List</li>
-                </ol>
-            </div>
+            @await Component.InvokeAsync("Breadcrumbs")
         </div>
     </div>
 </div>
