--- a/RMG.Web/Areas/Admin/Views/Platform/Index.cshtml
+++ b/RMG.Web/Areas/Admin/Views/Platform/Index.cshtml
@@ -11,17 +11,7 @@
                     </h3>
                 </div>
             </div>
-            <div class="col-lg-6">
-                <ol class="breadcrumb pull-right">
-                    <li class="breadcrumb-item">
-                        <a href="index.html">
-                            <i data-feather="home"></i>
-                        </a>
-                    </li>
-                    <li class="breadcrumb-item">Physical</li>
-                    <li class="breadcrumb-item active">Category</li>
-                </ol>
-            </div>
+            @await Component.InvokeAsync("Breadcrumbs")
         </div>
     </div>
 </div>
