--- a/RMG.Web/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/RMG.Web/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -49,7 +49,7 @@
             <div class="main-header-right row">
                 <div class="main-header-left d-lg-none w-auto">
                     <div class="logo-wrapper">
-                        <a href="index.html">
+                        <a asp-controller="Home" asp-action="Index">
                             <img class="blur-up lazyloaded d-block d-lg-none"
                                  src="~/admin/images/dashboard/multikart-logo-black.png" alt="">
                         </a>
@@ -65,57 +65,8 @@
                     </div>
                 </div>
                 <div class="nav-right col">
-                    <ul class="nav-menus">
-                        <li>
-                            <a class="text-dark" href="#!" onclick="javascript:toggleFullScreen()">
-                                <i data-feather="maximize-2"></i>
-                            </a>
-                        </li>
-                        <li class="onhover-dropdown">
-                            <i data-feather="bell"></i>
-                            <span class="badge badge-pill badge-primary pull-right notification-badge">3</span>
-                            <span class="dot"></span>
-                            <ul class="notification-dropdown onhover-show-div p-0">
-                                <li>Notification <span class="badge badge-pill badge-primary pull-right">3</span></li>
-                                <li>
-                                    <div class="media">
-                                        <div class="media-body">
-                                            <h6 class="mt-0">
-                                                <span>
-                                                    <i class="shopping-color" data-feather="shopping-bag"></i>
-                                                </span>Your order ready for Ship..!
-                                            </h6>
-                                            <p class="mb-0">Lorem ipsum dolor sit amet, consectetuer.</p>
-                                        </div>
-                                    </div>
-                                </li>
-                                <li>
-                                    <div class="media">
-                                        <div class="media-body">
-                                            <h6 class="mt-0 txt-success">
-                                                <span>
-                                                    <i class="download-color font-success" data-feather="download"></i>
-                                                </span>Download Complete
-                                            </h6>
-                                            <p class="mb-0">Lorem ipsum dolor sit amet, consectetuer.</p>
-                                        </div>
-                                    </div>
-                                </li>
-                                <li>
-                                    <div class="media">
-                                        <div class="media-body">
-                                            <h6 class="mt-0 txt-danger">
-                                                <span>
-                                                    <i class="alert-color font-danger" data-feather="alert-circle"></i>
-                                                </span>250 MB trash files
-                                            </h6>
-                                            <p class="mb-0">Lorem ipsum dolor sit amet, consectetuer.</p>
-                                        </div>
-                                    </div>
-                                </li>
-                                <li class="txt-dark"><a href="javascript:void(0)">All</a> notification</li>
-                            </ul>
-                        </li>
+                    <ul class="nav-menus">       
+                        @await Component.InvokeAsync("Notification")
                         <li class="onhover-dropdown">
                             <div class="media align-items-center">
                                 <img class="align-self-center pull-right img-50 blur-up lazyloaded"
@@ -167,9 +118,9 @@
             <div class="page-sidebar">
                 <div class="main-header-left d-none d-lg-block">
                     <div class="logo-wrapper">
-                        <a href="index.html">
-                            <img class="d-none d-lg-block blur-up lazyloaded"
-                                 src="~/admin/images/dashboard/multikart-logo.png" alt="">
+                        <a asp-controller="Home" asp-action="Index">
+                            <img class="d-none d-lg-block blur-up lazyloaded" style="height:180px"
+                                 src="~/admin/images/dashboard/rmg-db1.png" alt="">
                         </a>
                     </div>
                 </div>
@@ -187,103 +138,11 @@
                     </div>
                     <ul class="sidebar-menu">
                         <li>
-                            <a class="sidebar-header" href="index.html">
+                            <a class="sidebar-header" asp-controller="Home" asp-action="Index">
                                 <i data-feather="home"></i>
                                 <span>Dashboard</span>
                             </a>
                         </li>
-
-                      @*   <li>
-                            <a class="sidebar-header" href="javascript:void(0)">
-                                <i data-feather="box"></i>
-                                <span>Products</span>
-                                <i class="fa fa-angle-right pull-right"></i>
-                            </a>
-
-                            <ul class="sidebar-submenu">
-                                <li>
-                                    <a href="javascript:void(0)">
-                                        <i class="fa fa-circle"></i>
-                                        <span>Physical</span>
-                                        <i class="fa fa-angle-right pull-right"></i>
-                                    </a>
-
-                                    <ul class="sidebar-submenu">
-                                        <li>
-                                            <a href="category.html">
-                                                <i class="fa fa-circle"></i>Category
-                                            </a>
-                                        </li>
-
-                                        <li>
-                                            <a href="category-sub.html">
-                                                <i class="fa fa-circle"></i>Sub Category
-                                            </a>
-                                        </li>
-
-                                        <li>
-                                            <a href="product-list.html">
-                                                <i class="fa fa-circle"></i>Product List
-                                            </a>
-                                        </li>
-
-                                        <li>
-                                            <a href="product-detail.html">
-                                                <i class="fa fa-circle"></i>Product Detail
-                                            </a>
-                                        </li>
-
-                                        <li>
-                                            <a href="add-product.html">
-                                                <i class="fa fa-circle"></i>Add Product
-                                            </a>
-                                        </li>
-                                    </ul>
-                                </li>
-
-                                <li>
-                                    <a href="javascript:void(0)">
-                                        <i class="fa fa-circle"></i>
-                                        <span>Digital</span>
-                                        <i class="fa fa-angle-right pull-right"></i>
-                                    </a>
-
-                                    <ul class="sidebar-submenu">
-                                        <li>
-                                            <a href="category-digital.html">
-                                                <i class="fa fa-circle"></i>Category
-                                            </a>
-                                        </li>
-
-                                        <li>
-                                            <a href="category-digitalsub.html">
-                                                <i class="fa fa-circle"></i>Sub Category
-                                            </a>
-                                        </li>
-
-                                        <li>
-                                            <a href="product-listdigital.html">
-                                                <i class="fa fa-circle"></i>Product List
-                                            </a>
-                                        </li>
-
-                                        <li>
-                                            <a href="add-digital-product.html">
-                                                <i class="fa fa-circle"></i>Add Product
-                                            </a>
-                                        </li>
-                                    </ul>
-                                </li>
-
-                                <li>
-                                    <a href="product-review.html">
-                                        <i class="fa fa-circle"></i>
-                                        <span>product Review</span>
-                                    </a>
-                                </li>
-                            </ul>
-                        </li> *@
-
                         <li>
                             <a class="sidebar-header" href="javascript:void(0)">
                                 <i data-feather="archive"></i>
