--- a/RMG.Web/Views/Shared/_LoginPartial.cshtml
+++ b/RMG.Web/Views/Shared/_LoginPartial.cshtml
@@ -6,8 +6,12 @@
 
 @if (SignInManager.IsSignedIn(User))
 {
-    <li>
-        <a id="manage" class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Hello @UserManager.GetUserName(User)!</a>
+    <li class="onhover-dropdown mobile-account">
+        <i class="fa fa-user" aria-hidden="true"></i>
+        My Account
+        <ul class="onhover-show-div">
+            <li><a asp-area="Identity" asp-page="/Account/Manage/Index">Profile</a></li>
+        </ul>
     </li>
     <li>
         <form id="logoutForm" class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Games", new { area = "Customer" })">
