--- a/RMG.Web/Views/Shared/_LoginPartial.cshtml
+++ b/RMG.Web/Views/Shared/_LoginPartial.cshtml
@@ -10,7 +10,7 @@
         <i class="fa fa-user" aria-hidden="true"></i>
         My Account
         <ul class="onhover-show-div">
-            <li><a asp-area="Identity" asp-page="/Account/Manage/Index">Profile</a></li>
+            <li><a asp-area="Identity" asp-page="/Account/Manage/Index">Manage Profile</a></li>
         </ul>
     </li>
     <li>
