--- a/RMG.Web/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/RMG.Web/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -78,29 +78,12 @@
                             </div>
                             <ul class="profile-dropdown onhover-show-div p-20 profile-dropdown-hover">
                                 <li>
-                                    <a href="javascript:void(0)">
-                                        <i data-feather="user"></i>Edit Profile
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="javascript:void(0)">
-                                        <i data-feather="mail"></i>Inbox
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="javascript:void(0)">
-                                        <i data-feather="lock"></i>Lock Screen
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="javascript:void(0)">
-                                        <i data-feather="settings"></i>Settings
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="javascript:void(0)">
-                                        <i data-feather="log-out"></i>Logout
-                                    </a>
+                                    <form id="logoutForm" class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "Admin" })">
+                                        <button id="logout" type="submit" class="nav-link btn btn-link text-dark border-0">@* <i data-feather="log-out"></i> *@Logout</button>
+                                    </form>
+                                    @* <a href="javascript:void(0)">
+                                        Logout
+                                    </a> *@
                                 </li>
                             </ul>
                         </li>
@@ -129,13 +112,6 @@
                         <i class="fa fa-times"
                            aria-hidden="true"></i>
                     </a>
-                    <div class="sidebar-user">
-                        <img class="img-60" src="~/admin/images/dashboard/user3.jpg" alt="#">
-                        <div>
-                            <h6 class="f-14">JOHN</h6>
-                            <p>general manager.</p>
-                        </div>
-                    </div>
                     <ul class="sidebar-menu">
                         <li>
                             <a class="sidebar-header" asp-controller="Home" asp-action="Index">
@@ -208,34 +184,7 @@
                                 </li>
                             </ul>
                         </li>
-                        </li>
 
-                        <li>
-                            <a class="sidebar-header" href="javascript:void(0)">
-                                <i data-feather="settings"></i><span>Settings</span><i class="fa fa-angle-right pull-right"></i>
-                            </a>
-                            <ul class="sidebar-submenu">
-                                <li>
-                                    <a href="profile.html">
-                                        <i class="fa fa-circle"></i>Profile
-                                    </a>
-                                </li>
-                            </ul>
-                        </li>
-
-                        <li>
-                            <a class="sidebar-header" href="forgot-password.html">
-                                <i data-feather="key"></i>
-                                <span>Forgot Password</span>
-                            </a>
-                        </li>
-
-                        <li>
-                            <a class="sidebar-header" href="login.html">
-                                <i data-feather="log-in"></i>
-                                <span>Login</span>
-                            </a>
-                        </li>
                     </ul>
                 </div>
             </div>
