--- a/RMG.Web/Areas/Customer/Views/BuySubscription/Index.cshtml
+++ b/RMG.Web/Areas/Customer/Views/BuySubscription/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model SubscriptionVM 
+﻿
 <!-- breadcrumb start -->
 <div class="breadcrumb-section">
     <div class="container">
@@ -24,10 +24,10 @@
 <section class="compare-section section-b-space ratio_asos">
     <div class="container">
         <div class="row">
-           
                 <div class="col-12">
-                    <div class="slide-4 no-arrow">
-                    @foreach (var sub in Model.Subscription)
+                <div class=" slide-4 no-arrow" id="subscription">
+
+@*                     @foreach (var sub in Model.Subscription)
                     {
                     <div>
                         <div class="compare-part">
@@ -38,16 +38,6 @@
                                         <h2 class="text-primary-emphasis">@sub.PackageName</h2>
                                 </a>
                             </div>
-@*                             <div class="detail-part">
-                                <div class="title-detail">
-                                    <h6>description</h6>
-                                </div>
-                                <div class="inner-detail">
-                                    <p>
-                                        Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-                                    </p>
-                                </div>
-                            </div> *@
                             <div class="detail-part">
                                 <div class="title-detail">
                                     <h6>Total Rent Game</h6>
@@ -72,6 +62,16 @@
                                     <h5>@sub.ReplaceCount</h5>
                                 </div>
                             </div>
+                                <div class="detail-part">
+                                    <div class="title-detail">
+                                        <h6>Enter No of Month</h6>
+                                    </div>
+                                    <div class="inner-detail">
+                                        <input class="form-control" type="number" name="month" value="" />
+                                    </div>
+                                </div>
+
+
                             <div class="detail-part">
                                 <div class="title-detail">
                                     <h6>Price</h6>
@@ -93,10 +93,16 @@
                                 </div>
                             </div>
                     </div>
-                    }
+                    } *@
                 </div>
             </div>
         </div>
     </div>
 </section>
 <!-- Section ends -->
+
+@section Scripts{
+    @{
+        <script src="~/jsfiles//buysubscription.js"></script>
+    }
+}
