--- a/RMG.Web/Areas/Identity/Pages/Account/Register.cshtml
+++ b/RMG.Web/Areas/Identity/Pages/Account/Register.cshtml
@@ -75,10 +75,12 @@
                             <div class="col-md-6">
                                 <label asp-for="Input.FullName">Full Name</label>
                                 <input type="text" asp-for="Input.FullName" class="form-control" aria-required="true" placeholder="Full Name" required="">
+                                <span asp-validation-for="Input.FullName" class="text-danger"></span>
                             </div>
                             <div class="col-md-6">
                                 <label asp-for="Input.Email">email</label>
                                 <input type="email" asp-for="Input.Email" class="form-control" autocomplete="username" aria-required="true" id="email" placeholder="Email" required="">
+                                <span asp-validation-for="Input.Email" class="text-danger"></span>
                             </div>
                             </div>
                             <div class="form-row row">
@@ -86,11 +88,13 @@
                                 <label asp-for="Input.Password">Password</label>
                                 <input asp-for="Input.Password" class="form-control" autocomplete="new-password" aria-required="true" type="password" id="review"
                                        placeholder="Enter your password" required="">
+                                <span asp-validation-for="Input.Password" class="text-danger"></span>
                             </div>
                                 <div class="col-md-6">
                                     <label asp-for="Input.ConfirmPassword">Confirm Password</label>
                                     <input asp-for="Input.ConfirmPassword" class="form-control" autocomplete="new-password" aria-required="true" type="password" id="review"
                                            placeholder="Enter your password" required="">
+                                <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
                                 </div>
                             </div>
                             <button id="registerSubmit" type="submit" class="btn btn-solid w-auto">create Account</button>
