--- a/RMG.Web/Areas/Customer/Views/BuySubscription/Index.cshtml
+++ b/RMG.Web/Areas/Customer/Views/BuySubscription/Index.cshtml
@@ -25,75 +25,7 @@
     <div class="container">
         <div class="row">
                 <div class="col-12">
-                <div class=" slide-4 no-arrow" id="subscription">
-
-@*                     @foreach (var sub in Model.Subscription)
-                    {
-                    <div>
-                        <div class="compare-part">
-                            <div class="img-secton">
-                                <div>
-                                </div>
-                                <a href="#">
-                                        <h2 class="text-primary-emphasis">@sub.PackageName</h2>
-                                </a>
-                            </div>
-                            <div class="detail-part">
-                                <div class="title-detail">
-                                    <h6>Total Rent Game</h6>
-                                </div>
-                                <div class="inner-detail">
-                                    <h5>@sub.RentCount</h5>
-                                </div>
-                            </div>
-                            <div class="detail-part">
-                                <div class="title-detail">
-                                    <h6>Rent New Released Games</h6>
-                                </div>
-                                <div class="inner-detail">
-                                    <h5>@sub.NewGameCount</h5>
-                                </div>
-                            </div>
-                            <div class="detail-part">
-                                <div class="title-detail">
-                                    <h6>Replace Games</h6>
-                                </div>
-                                <div class="inner-detail">
-                                    <h5>@sub.ReplaceCount</h5>
-                                </div>
-                            </div>
-                                <div class="detail-part">
-                                    <div class="title-detail">
-                                        <h6>Enter No of Month</h6>
-                                    </div>
-                                    <div class="inner-detail">
-                                        <input class="form-control" type="number" name="month" value="" />
-                                    </div>
-                                </div>
-
-
-                            <div class="detail-part">
-                                <div class="title-detail">
-                                    <h6>Price</h6>
-                                </div>
-                                <div class="inner-detail">
-                                    <h5>@sub.Price</h5>
-                                </div>
-                            </div>
-                                <div class="btn-part">
-                                @if (sub.Id == Model.SubscriptionHistory?.SubscriptionId)
-                                {
-                                    <button asp-controller="BuySubscription" asp-action="Buy" asp-route-Id="@sub.Id" disabled class="btn btn-success">Purchased</button>
-                                    
-                                }
-                                else
-                                {
-                                    <a asp-controller="BuySubscription" asp-action="Buy" asp-route-Id="@sub.Id" class="btn btn-solid">Buy Now</a>
-                                }
-                                </div>
-                            </div>
-                    </div>
-                    } *@
+                <div class="d-flex flex-wrap gap-3" id="subscription">
                 </div>
             </div>
         </div>
