--- a/RMG.Web/Areas/Customer/Views/BuySubscription/Index.cshtml
+++ b/RMG.Web/Areas/Customer/Views/BuySubscription/Index.cshtml
@@ -25,7 +25,7 @@
     <div class="container">
         <div class="row">
                 <div class="col-12">
-                <div class="d-flex flex-wrap gap-3" id="subscription">
+                <div class="d-flex flex-nowrap gap-3" id="subscription">
                 </div>
             </div>
         </div>
