Monday and previous

--- a/RMG.Web/Areas/Customer/Views/BuySubscription/Index.cshtml
+++ b/RMG.Web/Areas/Customer/Views/BuySubscription/Index.cshtml
@@ -11,7 +11,7 @@
             <div class="col-sm-6">
                 <nav aria-label="breadcrumb" class="theme-breadcrumb">
                     <ol class="breadcrumb">
-                        <li class="breadcrumb-item"><a href="index.html">Home</a></li>
+                        <li class="breadcrumb-item"><a asp-controller="Games" asp-action="Index">home</a></li>
                         <li class="breadcrumb-item active" aria-current="page">Packages</li>
                     </ol>
                 </nav>
@@ -35,6 +35,6 @@
 
 @section Scripts{
     @{
-        <script src="~/jsfiles//buysubscription.js"></script>
+        <script src="~/jsfiles//buysub.js"></script>
     }
 }
