--- a/RMG.Web/Areas/Customer/Views/Rented/Index.cshtml
+++ b/RMG.Web/Areas/Customer/Views/Rented/Index.cshtml
@@ -4,14 +4,14 @@
         <div class="row">
             <div class="col-sm-6">
                 <div class="page-title">
-                    <h2>Manage Games</h2>
+                    <h2>Rented Games</h2>
                 </div>
             </div>
             <div class="col-sm-6">
                 <nav aria-label="breadcrumb" class="theme-breadcrumb">
                     <ol class="breadcrumb">
-                        <li class="breadcrumb-item"><a href="index.html">Home</a></li>
-                        <li class="breadcrumb-item active">Rents</li>
+                        <li class="breadcrumb-item"><a asp-controller="Games" asp-action="Index">home</a></li>
+                        <li class="breadcrumb-item active">Rentals</li>
                     </ol>
                 </nav>
             </div>
