--- a/RMG.Web/Areas/Customer/Views/Games/Index.cshtml
+++ b/RMG.Web/Areas/Customer/Views/Games/Index.cshtml
@@ -5,16 +5,8 @@
         <div class="row">
             <div class="col-sm-6">
                 <div class="page-title">
-                    <h2>collection</h2>
+                    <h2>Games</h2>
                 </div>
-            </div>
-            <div class="col-sm-6">
-                <nav aria-label="breadcrumb" class="theme-breadcrumb">
-                    <ol class="breadcrumb">
-                        <li class="breadcrumb-item"><a href="index.html">home</a></li>
-                        <li class="breadcrumb-item active" aria-current="page">collection</li>
-                    </ol>
-                </nav>
             </div>
         </div>
     </div>
