--- a/RMG.Web/Areas/Customer/Views/Profile/Index.cshtml
+++ b/RMG.Web/Areas/Customer/Views/Profile/Index.cshtml
@@ -10,7 +10,7 @@
             <div class="col-sm-6">
                 <nav aria-label="breadcrumb" class="theme-breadcrumb">
                     <ol class="breadcrumb">
-                        <li class="breadcrumb-item"><a href="index.html">Home</a></li>
+                        <li class="breadcrumb-item"><a asp-controller="Games" asp-action="Index">home</a></li>
                         <li class="breadcrumb-item active" aria-current="page">profile</li>
                     </ol>
                 </nav>
