--- a/RMG.Web/Areas/Customer/Views/Rented/RentalHistory.cshtml
+++ b/RMG.Web/Areas/Customer/Views/Rented/RentalHistory.cshtml
@@ -1,17 +1,17 @@
-﻿    <!-- breadcrumb start -->
+﻿<!-- breadcrumb start -->
 <div class="breadcrumb-section">
     <div class="container">
         <div class="row">
             <div class="col-sm-6">
                 <div class="page-title">
-                    <h2>Subscription History</h2>
+                    <h2>Rental History</h2>
                 </div>
             </div>
             <div class="col-sm-6">
                 <nav aria-label="breadcrumb" class="theme-breadcrumb">
                     <ol class="breadcrumb">
                         <li class="breadcrumb-item"><a asp-controller="Games" asp-action="Index">home</a></li>
-                        <li class="breadcrumb-item active">SubscriptionHistory</li>
+                        <li class="breadcrumb-item active">RentalHistory</li>
                     </ol>
                 </nav>
             </div>
@@ -25,18 +25,16 @@
         <div class="row">
             <div class="col-sm-12 table-responsive-xs">
                 <table id="tblData" class="table cart-table">
-                    @* <thead>
+                    <thead>
                         <tr class="table-head">
-                            <th scope="col">Subscription Name</th>
-                            <th scope="col">Start Date</th>
-                            <th scope="col">End Date</th>
+                            <th scope="col">image</th>
+                            <th scope="col">Game Name</th>
+                            <th scope="col">Rented Date</th>
+                            <th scope="col">Return Date</th>
                             <th scope="col">Status</th>
                             <th scope="col">Action</th>
                         </tr>
                     </thead>
-                    <tbody id="subscriptionList">
-
-                    </tbody> *@
                 </table>
             </div>
         </div>
@@ -45,6 +43,6 @@
 <!--section end-->
 @section Scripts {
     @{
-        <script src="~/jsfiles/subscriptionHistory.js"></script>
+        <script src="~/jsfiles/rentalHistory.js"></script>
     }
 }
